[fix] fix align contents

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -19,7 +19,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  max-width: 1500px;
+
   animation: load 1.5s ease-in-out forwards;
 }
 
@@ -37,7 +37,8 @@
   background: linear-gradient(315deg, rgba(23, 23, 23, 0.8), rgba(38, 38, 38, 0.8), rgba(22, 22, 22, 0.8));
   border: 1px solid var(--component-color);
   color: white;
-  min-width: 70%;
+  width: 70%;
+  max-width: 1000px;
   background-size: 200% 100%;
   margin-top: 1em;
   transition: all 0.3s ease-in-out;
